[tool.poetry]
name = "tunneller"
version = "0.1.0"
description = ""
authors = ["trojvn <mrx.trojan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsoner = {git = "https://gitlab.yuharan.ru/mrx/jsoner.git"}
sshtunnel = "^0.4.0"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
