[tool.poetry]
name = "tunneller"
version = "0.2.0"
description = ""
authors = ["trojvn <mrx.trojan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsoner = {git = "https://github.com/trojvn/jsoner.git"}
tooler = {git = "https://github.com/trojvn/tooler.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
